--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,10 +1,18 @@
+@import url("https://fonts.googleapis.com/css2?family=Dangrek&display=swap");
 .projects {
   width: 100%;
   height: auto;
-  display: flex;
   justify-content: center;
+  background-color: #ebe5e5;
   align-items: center;
   flex-direction: column;
+  font-family: "Dangrek", cursive;
+  color: #3e497a;
+}
+.certificates__header {
+  text-align: center;
+  margin-bottom: 0;
+  font-size: 4em;
 }
 .projects .projectTitle {
   text-align: center;
@@ -14,10 +22,10 @@
 }
 
 .projectList {
-  width: 70vw;
+  width: 100%;
   height: auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   place-items: center;
 }
 
@@ -30,10 +38,13 @@
   margin: 40px;
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.2);
   text-align: center;
+  background-color: white;
+  transition: 0.3s transform ease-out;
 }
 .projectItem:hover {
+  transform: translateY(-3px);
   box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.5);
-  transition: 0.3s ease-in;
+
   cursor: pointer;
 }
 
